--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -1255,7 +1255,7 @@ button {
 }
 
 @media screen and (max-width: 1439px) {
-  .favorite-products-section {
+  .favorites-block {
     width: auto;
   }
 }
