--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -478,9 +478,11 @@ button {
   .footer-col:not(:nth-last-child(2)):not(.is-active) > .list-unstyled {
     display: none;
   }
-}
 
-@media screen and (max-width: 768px) {
+  .footer-col:not(:nth-last-child(2)):not(.is-active) > .footer-column-name {
+    margin-bottom: 0;
+  }
+
   .footer-col:not(:nth-last-child(2)) > .footer-column-name {
     cursor: pointer;
     display: inline-flex;
