--- a/teamoscow/css/app.css
+++ b/teamoscow/css/app.css
@@ -1078,6 +1078,10 @@ button {
   line-height: 0;
 }
 
+.animated_pattern video {
+  outline: none;
+}
+
 /*.animated_pattern {
   outline: 3px solid #F7F6F5;
 }*/
